--- a/interface.html
+++ b/interface.html
@@ -7,40 +7,56 @@
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
+		<div id="content">
+			<section id="allDropmeContainer">
 
-		<div class="dropme" id="container1" data-associatedSaveVar="dropme1"><!--
-		     --><div class="movable" data-duration="13" data-name="Kyrie" data-position=""></div><!--
-		     --><div class="movable" data-duration="62" data-name="Fabou" data-position=""></div><!--
-		     --><div class="movable" data-duration="12" data-name="Ultima" data-position=""></div><!--
-		     --><div class="movable" data-duration="50" data-name="Superbob" data-position=""></div><!-- 
-		     --><div class="movable" data-duration="60" data-name="Baobab" data-position=""></div><!-- 
-		--></div>
+				<section id="mainContent">
+					<div class="dropme" id="container1" data-associatedSaveVar="dropme1"><!--
+					     --><div class="movable" data-duration="13" data-name="Kyrie" data-position=""></div><!--
+					     --><div class="movable" data-duration="62" data-name="Fabou" data-position=""></div><!--
+					     --><div class="movable" data-duration="12" data-name="Ultima" data-position=""></div><!--
+					     --><div class="movable" data-duration="50" data-name="Superbob" data-position=""></div><!-- 
+					     --><div class="movable" data-duration="60" data-name="Baobab" data-position=""></div><!-- 
+					--></div>
+				</section>
 
-		<hr />
 
-		<div class="dropme" id="container2" data-associatedSaveVar="dropme2"><!--
-		    --><div class="movable" data-duration="123" data-name="Isogenic" data-position=""></div><!--
-		    --><div class="movable" data-duration="89" data-name="Tiled" data-position=""></div><!--
-		    --><div class="movable" data-duration="78" data-name="FIFE" data-position=""></div><!--
-		    --><div class="movable" data-duration="65" data-name="Visionaire" data-position=""></div><!--
-		    --><div class="movable" data-duration="19" data-name="Unreal" data-position=""></div><!--
-		--></div>
+				<footer>
+					<div class="informationContainer">
+						<p>
+							      <span class="positionContainer"></span>
+							<br /><span class="nameContainer"></span>
+							<br /><span class="durationContainer"></span>
+						</p>
+					</div>
+					<div class="dropme" id="container2" data-associatedSaveVar="dropme2"><!--
+					    --><div class="movable" data-duration="123" data-name="Isogenic" data-position=""></div><!--
+					    --><div class="movable" data-duration="89" data-name="Tiled" data-position=""></div><!--
+					    --><div class="movable" data-duration="78" data-name="FIFE" data-position=""></div><!--
+					    --><div class="movable" data-duration="65" data-name="Visionaire" data-position=""></div><!--
+					    --><div class="movable" data-duration="19" data-name="Unreal" data-position=""></div><!--
+					--></div>
+				</footer>
 
-		<div>
-			<p class="displayp" id="displayInfos1"></p>
-			<p class="displayp" id="displayInfos2"></p>
-		</div>
+				<div id="displaypContainer">
+					<p class="displayp" id="displayInfos1"></p>
+					<p class="displayp" id="displayInfos2"></p>
+				</div>
 
-		<div id="secretLab" class="visuallyhidden">
-			<div class="mainSpecimen hoverWindow">
-				<p>
-					      <span class="positionContainer"></span>
-					<br /><span class="nameContainer"></span>
-					<br /><span class="durationContainer"></span>
-				</p>
+			</section>
+
+
+			<div id="secretLab" class="visuallyhidden">
+				<div class="mainSpecimen hoverWindow">
+					<p>
+						      <span class="positionContainer"></span>
+						<br /><span class="nameContainer"></span>
+						<br /><span class="durationContainer"></span>
+					</p>
+				</div>
 			</div>
-		</div>
 
+		</div>
 		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="js/app.js"></script>
